--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,9 @@ services:
       dockerfile: Dockerfile
       args:
         - ALPINE_VERSION=${ALPINE_VERSION}
-    hostname: docker-workspace
+    hostname: webmin-workspace
     environment:
       - TF_VAR_SSH_PUBLIC_KEY=${SSH_PUBLIC_KEY}
-      - PS1=\u@\h:\w\$\040
     volumes:
       - ./terraform:/terraform
       - ./ansible:/ansible
